--- a/Appcasting.html
+++ b/Appcasting.html
@@ -14,7 +14,7 @@
         ]]>
       </description>
       <link>https://www.iflybuds.com</link>
-      <sparkle:version>20221120</sparkle:version>
+      <sparkle:version>11</sparkle:version>
       <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
       <pubDate>Mon, 05 Oct 2015 19:20:11 +0000</pubDate>
       <enclosure url="https://github.com/SunChJ/TestSparkUpdate/archive/refs/tags/Release/0.9.0.zip"
