--- a/Appcasting.html
+++ b/Appcasting.html
@@ -6,10 +6,7 @@
       <description>
         <![CDATA[
           <ul>
-            <li>首页的部分调整</li>
-            <li>初始连接的调整</li>
-            <li>......</li>
-            <li>......</li>
+            <li>发送给用户的初始内测版本</li>
           </ul>
         ]]>
       </description>
