--- a/Appcasting.html
+++ b/Appcasting.html
@@ -1,22 +1,22 @@
 <?xml version="1.0" standalone="yes"?>
 <rss xmlns:sparkle="http://www.andymatuschak.org/xml-namespaces/sparkle" version="2.0">
-  <channel>
-    <item>
-      <title>Version 0.9.0</title>
-      <description>
-        <![CDATA[
-          <ul>
-            <li>发送给用户的初始内测版本</li>
-          </ul>
-        ]]>
-      </description>
-      <link>https://www.iflybuds.com</link>
-      <sparkle:version>12</sparkle:version>
-      <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
-      <pubDate>Mon, 05 Oct 2015 19:20:11 +0000</pubDate>
-      <enclosure url="https://github.com/SunChJ/TestSparkUpdate/archive/refs/tags/Release/0.9.0.zip"
-        sparkle:edSignature="6odpFK7RGl0gaXRK3RcRNnA0aXvZ7NWbx+UgoBOaslm/Sm3a8XBtGZlqO/nu9Az6jvfE9GslOaeqFT7gnDWAAQ=="
-        length="50708241" type="application/octet-stream" />
-    </item>
-  </channel>
+    <channel>
+        <title>Version 0.9.0(11)</title>
+        <description>
+            <![CDATA[
+              <ul>
+                <li>发送给用户的初始内测版本</li>
+                <li>测试自动打包</li>
+              </ul>
+            ]]>
+          </description>
+        <item>
+            <title>0.9.0</title>
+            <pubDate>Thu, 17 Nov 2022 16:38:52 +0800</pubDate>
+            <sparkle:version>11</sparkle:version>
+            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
+            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
+            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit%200.9.0(11).zip" length="50534441" type="application/octet-stream" sparkle:edSignature="b3gTEnNMJhKf6YeX3Joo401STMlL8GZ0BmvqzVpU+NMVht5X5EGQ4fa8Ccz26eOHoP8fQtuu5Z+Aol4zWXS4Dg=="/>
+        </item>
+    </channel>
 </rss>
