--- a/Appcasting.html
+++ b/Appcasting.html
@@ -1,22 +1,22 @@
 <?xml version="1.0" standalone="yes"?>
 <rss xmlns:sparkle="http://www.andymatuschak.org/xml-namespaces/sparkle" version="2.0">
     <channel>
-        <title>Version 0.9.0(11)</title>
+        <title>iFLYBUDS Kit 0.9.0(3)</title>
         <item>
-            <title>0.9.0</title>
-            <description>
-              <![CDATA[
-                <ul>
-                  <li>发送给用户的初始内测版本</li>
-                  <li>测试自动打包</li>
-                </ul>
-              ]]>
-            </description>
-            <pubDate>Thu, 17 Nov 2022 16:38:52 +0800</pubDate>
-            <sparkle:version>11</sparkle:version>
-            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
-            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit%200.9.0(11).zip" length="50534441" type="application/octet-stream" sparkle:edSignature="b3gTEnNMJhKf6YeX3Joo401STMlL8GZ0BmvqzVpU+NMVht5X5EGQ4fa8Ccz26eOHoP8fQtuu5Z+Aol4zWXS4Dg=="/>
-        </item>
+          <title>0.9.0(3)</title>
+          <description>
+            <![CDATA[
+              <ul>
+                <li>发送给用户的初始内测版本</li>
+                <li>调整首次连接界面</li>
+              </ul>
+            ]]>
+          </description>
+          <pubDate>Fri, 18 Nov 2022 16:56:47 +0800</pubDate>
+          <sparkle:version>3</sparkle:version>
+          <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
+          <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
+          <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build3).dmg" length="53216136" type="application/octet-stream" sparkle:edSignature="JW++89e4895m6JOorNb1f9rPkh+iIZlm1HHz4wuDel5pmjjPylTe4IRQA5db7fEWW6+EQrOodPjdaRPR/1TpBQ=="/>
+      </item>
     </channel>
 </rss>
