--- a/Appcasting.html
+++ b/Appcasting.html
@@ -1,7 +1,26 @@
 <?xml version="1.0" standalone="yes"?>
 <rss xmlns:sparkle="http://www.andymatuschak.org/xml-namespaces/sparkle" version="2.0">
     <channel>
-        <title>iFLYBUDS Kit 0.9.0(3)</title>
+        <title>iFLYBUDS Kit 0.9.0(5)</title>
+        <item>
+          <title>0.9.0(5)</title>
+          <description>
+            <![CDATA[
+              <ul>
+                <li>发送给用户的初始内测版本</li>
+                <li>调整首次连接界面</li>
+                <li>测试</li>
+              </ul>
+            ]]>
+          <pubDate>Mon, 21 Nov 2022 13:55:24 +0800</pubDate>
+          <sparkle:version>5</sparkle:version>
+          <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
+          <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
+          <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build5).zip" length="50704041" type="application/octet-stream" sparkle:edSignature="mCq5bzN8wWrN6YwM30TupFUbpEIDZtalnva9WuEUFv5Fe9i/PwdElh4b0GDaBpiKtW3L2W/riym6JnTHX+uLDQ=="/>
+          <sparkle:deltas>
+              <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit5-3.delta" sparkle:deltaFrom="3" length="606170" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="nh6f/up9lw8x35rXRt/2I4HjGf6tuBCiM9xuzhLbQALWRAwJ0tHBnbml/fAx1V3TU7B/i1z0qE5gNovpOEwdDQ=="/>
+          </sparkle:deltas>
+      </item>
         <item>
           <title>0.9.0(3)</title>
           <description>
