--- a/Appcasting.html
+++ b/Appcasting.html
@@ -12,6 +12,7 @@
                 <li>测试</li>
               </ul>
             ]]>
+          </description>
           <pubDate>Mon, 21 Nov 2022 13:55:24 +0800</pubDate>
           <sparkle:version>5</sparkle:version>
           <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
