chore: update build 6

--- a/Appcasting.html
+++ b/Appcasting.html
@@ -1,42 +1,55 @@
 <?xml version="1.0" standalone="yes"?>
 <rss xmlns:sparkle="http://www.andymatuschak.org/xml-namespaces/sparkle" version="2.0">
     <channel>
-        <title>iFLYBUDS Kit 0.9.0(5)</title>
+        <title>iFLYBUDS Kit</title>
         <item>
-          <title>0.9.0(5)</title>
-          <description>
-            <![CDATA[
+            <title>0.9.0(6)</title>
+            <description><![CDATA[
+              <ul>
+                <li>10.30内测包</li>
+              </ul>
+            ]]></description>
+            <pubDate>Thu, 01 Dec 2022 18:45:05 +0800</pubDate>
+            <sparkle:version>6</sparkle:version>
+            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
+            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
+            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build%206).dmg" length="57754282" type="application/octet-stream" sparkle:edSignature="3GFSeb2JqfLUZ/YKSrR1Zh9OFJMlN7ODnOz31kHuWmFE5dLZrDmnkz+jraC9xsel7QPcig4Urt81UaaeqIqACA=="/>
+            <sparkle:deltas>
+                <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit6-5.delta" sparkle:deltaFrom="5" length="5394442" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="tV7YsfUh7mDQ1mx8C6AcVIqftPlKd3fw4PMUlyt+aq+MXv6gVDL0OjBShtrkw2TDf/IXUxJhia5gqSBjSXeZBw=="/>
+                <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit6-3.delta" sparkle:deltaFrom="3" length="5206430" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="i0Am0je0f5F+YrdGYPQNC4N0fi0+Li/kCzTi+/5sSzhYAW+LAoYLGaTQ/6DAldD/IlcPqQDuez2xP4d/2mFUBw=="/>
+            </sparkle:deltas>
+        </item>
+        <item>
+            <title>0.9.0(5)</title>
+            <description><![CDATA[
               <ul>
                 <li>发送给用户的初始内测版本</li>
                 <li>调整首次连接界面</li>
                 <li>测试</li>
               </ul>
-            ]]>
-          </description>
-          <pubDate>Mon, 21 Nov 2022 13:55:24 +0800</pubDate>
-          <sparkle:version>5</sparkle:version>
-          <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
-          <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-          <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build5).zip" length="50704041" type="application/octet-stream" sparkle:edSignature="mCq5bzN8wWrN6YwM30TupFUbpEIDZtalnva9WuEUFv5Fe9i/PwdElh4b0GDaBpiKtW3L2W/riym6JnTHX+uLDQ=="/>
-          <sparkle:deltas>
-              <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit5-3.delta" sparkle:deltaFrom="3" length="606170" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="nh6f/up9lw8x35rXRt/2I4HjGf6tuBCiM9xuzhLbQALWRAwJ0tHBnbml/fAx1V3TU7B/i1z0qE5gNovpOEwdDQ=="/>
-          </sparkle:deltas>
-      </item>
+            ]]></description>
+            <pubDate>Mon, 21 Nov 2022 13:55:24 +0800</pubDate>
+            <sparkle:version>5</sparkle:version>
+            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
+            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
+            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build5).zip" length="50704041" type="application/octet-stream" sparkle:edSignature="mCq5bzN8wWrN6YwM30TupFUbpEIDZtalnva9WuEUFv5Fe9i/PwdElh4b0GDaBpiKtW3L2W/riym6JnTHX+uLDQ=="/>
+            <sparkle:deltas>
+                <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit5-3.delta" sparkle:deltaFrom="3" length="606170" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="nh6f/up9lw8x35rXRt/2I4HjGf6tuBCiM9xuzhLbQALWRAwJ0tHBnbml/fAx1V3TU7B/i1z0qE5gNovpOEwdDQ=="/>
+            </sparkle:deltas>
+        </item>
         <item>
-          <title>0.9.0(3)</title>
-          <description>
-            <![CDATA[
+            <title>0.9.0(3)</title>
+            <description><![CDATA[
               <ul>
                 <li>发送给用户的初始内测版本</li>
                 <li>调整首次连接界面</li>
               </ul>
-            ]]>
-          </description>
-          <pubDate>Fri, 18 Nov 2022 16:56:47 +0800</pubDate>
-          <sparkle:version>3</sparkle:version>
-          <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
-          <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-          <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build3).dmg" length="53216136" type="application/octet-stream" sparkle:edSignature="JW++89e4895m6JOorNb1f9rPkh+iIZlm1HHz4wuDel5pmjjPylTe4IRQA5db7fEWW6+EQrOodPjdaRPR/1TpBQ=="/>
-      </item>
+            ]]></description>
+            <pubDate>Fri, 18 Nov 2022 16:56:47 +0800</pubDate>
+            <sparkle:version>3</sparkle:version>
+            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
+            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
+            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build3).dmg" length="53216136" type="application/octet-stream" sparkle:edSignature="JW++89e4895m6JOorNb1f9rPkh+iIZlm1HHz4wuDel5pmjjPylTe4IRQA5db7fEWW6+EQrOodPjdaRPR/1TpBQ=="/>
+        </item>
     </channel>
 </rss>
