fix: 尝试修复 官网 build5 zip 更新失败的问题

--- a/Appcasting.html
+++ b/Appcasting.html
@@ -15,7 +15,7 @@
             <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
             <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build%206).dmg" length="57754282" type="application/octet-stream" sparkle:edSignature="3GFSeb2JqfLUZ/YKSrR1Zh9OFJMlN7ODnOz31kHuWmFE5dLZrDmnkz+jraC9xsel7QPcig4Urt81UaaeqIqACA=="/>
             <sparkle:deltas>
-                <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit6-5.delta" sparkle:deltaFrom="5" length="5394442" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="tV7YsfUh7mDQ1mx8C6AcVIqftPlKd3fw4PMUlyt+aq+MXv6gVDL0OjBShtrkw2TDf/IXUxJhia5gqSBjSXeZBw=="/>
+                <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit6-5.delta" sparkle:deltaFrom="5" length="5382334" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1845280" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="m8mbJmTtmWadH1HW/9oqHQEOgxlo3ZtZd37BgOIZqLvyrajpmuV4AqkHmdhOPi/ywYyCov+S3xzU8jzGLwnTDA=="/>
                 <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit6-3.delta" sparkle:deltaFrom="3" length="5206430" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="i0Am0je0f5F+YrdGYPQNC4N0fi0+Li/kCzTi+/5sSzhYAW+LAoYLGaTQ/6DAldD/IlcPqQDuez2xP4d/2mFUBw=="/>
             </sparkle:deltas>
         </item>
@@ -32,7 +32,7 @@
             <sparkle:version>5</sparkle:version>
             <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
             <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build5).zip" length="50704041" type="application/octet-stream" sparkle:edSignature="mCq5bzN8wWrN6YwM30TupFUbpEIDZtalnva9WuEUFv5Fe9i/PwdElh4b0GDaBpiKtW3L2W/riym6JnTHX+uLDQ=="/>
+            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build%205).dmg" length="53231757" type="application/octet-stream" sparkle:edSignature="MkDG3+MBDje1WuLkAi12nkHViYfin838HLG7/9q4nSFIWjLdCrUDC/oaxtWI2s8JbQ1fCt4a9kkTQJjjNrImBA=="/>
             <sparkle:deltas>
                 <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit5-3.delta" sparkle:deltaFrom="3" length="606170" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="nh6f/up9lw8x35rXRt/2I4HjGf6tuBCiM9xuzhLbQALWRAwJ0tHBnbml/fAx1V3TU7B/i1z0qE5gNovpOEwdDQ=="/>
             </sparkle:deltas>
