--- a/Appcasting.html
+++ b/Appcasting.html
@@ -3,6 +3,24 @@
     <channel>
         <title>iFLYBUDS Kit</title>
         <item>
+            <title>0.9.0(11)</title>
+            <description><![CDATA[
+              <ul>
+                <li>修复一些已知的问题</li>
+                <li>增加一些新功能</li>
+              </ul>
+            ]]></description>
+            <pubDate>Thu, 08 Dec 2022 13:56:55 +0800</pubDate>
+            <sparkle:version>11</sparkle:version>
+            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
+            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
+            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build%2011).dmg" length="57843562" type="application/octet-stream" sparkle:edSignature="s2BM8eamDYlw5qwG4t4EAoUhQe40fjlQIT/cXCEydprCNehmF5UGhSo+NaJZiBUJmiwKoqNVYf2vpWkFii93AQ=="/>
+            <sparkle:deltas>
+                <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit11-5.delta" sparkle:deltaFrom="5" length="5543258" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1845280" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="mSrbGulJSW9DoXP1IpCNABCbIvQv6bGEnnlLDI4xeiOkSj5q/mhaRfkdDH/TLz1TBrK6hWr9cYlQlXqGyJGBDQ=="/>
+                <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit11-3.delta" sparkle:deltaFrom="3" length="5374902" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="tvFvIJmQakite7ISS0LLVui/XyxrhXyFc7ZbtydpHhTjPvBmyFKrN/qsoNS2uoADdCwSFdtXUyKlRXC5d3lRDg=="/>
+            </sparkle:deltas>
+        </item>
+        <item>
             <title>0.9.0(5)</title>
             <description><![CDATA[
               <ul>
@@ -19,20 +37,6 @@
             <sparkle:deltas>
                 <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit5-3.delta" sparkle:deltaFrom="3" length="606170" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="nh6f/up9lw8x35rXRt/2I4HjGf6tuBCiM9xuzhLbQALWRAwJ0tHBnbml/fAx1V3TU7B/i1z0qE5gNovpOEwdDQ=="/>
             </sparkle:deltas>
-        </item>
-        <item>
-            <title>0.9.0(3)</title>
-            <description><![CDATA[
-              <ul>
-                <li>发送给用户的初始内测版本</li>
-                <li>调整首次连接界面</li>
-              </ul>
-            ]]></description>
-            <pubDate>Fri, 18 Nov 2022 16:56:47 +0800</pubDate>
-            <sparkle:version>3</sparkle:version>
-            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
-            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build3).dmg" length="53216136" type="application/octet-stream" sparkle:edSignature="JW++89e4895m6JOorNb1f9rPkh+iIZlm1HHz4wuDel5pmjjPylTe4IRQA5db7fEWW6+EQrOodPjdaRPR/1TpBQ=="/>
         </item>
     </channel>
 </rss>
