--- a/Appcasting.html
+++ b/Appcasting.html
@@ -8,16 +8,17 @@
               <ul>
                 <li>修复一些已知的问题</li>
                 <li>增加一些新功能</li>
+                <li>替换更新源</li>
               </ul>
             ]]></description>
             <pubDate>Thu, 08 Dec 2022 18:23:31 +0800</pubDate>
             <sparkle:version>13</sparkle:version>
             <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
             <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-            <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit(build%2012).dmg" length="56461190" type="application/octet-stream" sparkle:edSignature="lP0AS2qe7wHmfdVq5yrbzbhwrHHYFBofWi5DAWqdyOaRVBxEeiZtQKlL32VWnmaaHL+ynR2bU8DTQZBtce82BQ=="/>
+            <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit(build%2013).dmg" length="56461383" type="application/octet-stream" sparkle:edSignature="neXb9CR7gtntG5qIcNDZmyAiDA9zEXwLlIIBhQD7t4QOE08Ntd6ZJd0kssC+l+j5we4IM5Zr5oIdTj+Gg2y5DA=="/>
             <sparkle:deltas>
-                <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit13-5.delta" sparkle:deltaFrom="5" length="5539026" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1845280" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="zbfnUdZIEud7akWSZVcnve0HIOHc2GonFwYQvyuoM8uw+WL2c/rviTRqYMvdgeew8qq5Z3JLkOs6NAF8KgcpAw=="/>
                 <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit13-3.delta" sparkle:deltaFrom="3" length="5380230" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="NdgUc70lj3DhATmCJvX6wG7qzOErStqaY1rRUp0nU8HF2xFMG0I07EHvJZlQatuyKh+wEowIn3LSRz96YI+CDw=="/>
+                <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit13-5.delta" sparkle:deltaFrom="5" length="5539026" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1845280" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="zbfnUdZIEud7akWSZVcnve0HIOHc2GonFwYQvyuoM8uw+WL2c/rviTRqYMvdgeew8qq5Z3JLkOs6NAF8KgcpAw=="/>
             </sparkle:deltas>
         </item>
         <item>
