--- a/Appcasting.html
+++ b/Appcasting.html
@@ -8,36 +8,14 @@
               <ul>
                 <li>修复一些已知的问题</li>
                 <li>增加一些新功能</li>
-                <li>替换更新源</li>
+                <li>替换更新源测试2</li>
               </ul>
             ]]></description>
             <pubDate>Thu, 08 Dec 2022 18:23:31 +0800</pubDate>
             <sparkle:version>13</sparkle:version>
             <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
             <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-            <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit(build%2013).dmg" length="56461383" type="application/octet-stream" sparkle:edSignature="neXb9CR7gtntG5qIcNDZmyAiDA9zEXwLlIIBhQD7t4QOE08Ntd6ZJd0kssC+l+j5we4IM5Zr5oIdTj+Gg2y5DA=="/>
-            <sparkle:deltas>
-                <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit13-3.delta" sparkle:deltaFrom="3" length="5380230" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="NdgUc70lj3DhATmCJvX6wG7qzOErStqaY1rRUp0nU8HF2xFMG0I07EHvJZlQatuyKh+wEowIn3LSRz96YI+CDw=="/>
-                <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit13-5.delta" sparkle:deltaFrom="5" length="5539026" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1845280" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="zbfnUdZIEud7akWSZVcnve0HIOHc2GonFwYQvyuoM8uw+WL2c/rviTRqYMvdgeew8qq5Z3JLkOs6NAF8KgcpAw=="/>
-            </sparkle:deltas>
-        </item>
-        <item>
-            <title>0.9.0(5)</title>
-            <description><![CDATA[
-              <ul>
-                <li>发送给用户的初始内测版本</li>
-                <li>调整首次连接界面</li>
-                <li>测试</li>
-              </ul>
-            ]]></description>
-            <pubDate>Mon, 21 Nov 2022 13:55:24 +0800</pubDate>
-            <sparkle:version>5</sparkle:version>
-            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
-            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-            <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit(build%205).dmg" length="53231757" type="application/octet-stream" sparkle:edSignature="MkDG3+MBDje1WuLkAi12nkHViYfin838HLG7/9q4nSFIWjLdCrUDC/oaxtWI2s8JbQ1fCt4a9kkTQJjjNrImBA=="/>
-            <sparkle:deltas>
-                <enclosure url="https://raw.githubusercontent.com/SunChJ/KitMacUpdater/main/iFLYBUDS%20Kit5-3.delta" sparkle:deltaFrom="3" length="606170" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1844288" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="nh6f/up9lw8x35rXRt/2I4HjGf6tuBCiM9xuzhLbQALWRAwJ0tHBnbml/fAx1V3TU7B/i1z0qE5gNovpOEwdDQ=="/>
-            </sparkle:deltas>
+            <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit(build%2013).dmg" length="56461414" type="application/octet-stream" sparkle:edSignature="g32c0lqj4IolRmaiJ3En4enJU71mnVlPHKNpld+botClC7rQrJzv/F5fvK6LhPJyJ+GjvrgBvhue77MQ/81lAQ=="/>
         </item>
     </channel>
 </rss>
