--- a/Appcasting.html
+++ b/Appcasting.html
@@ -3,6 +3,21 @@
     <channel>
         <title>iFLYBUDS Kit</title>
         <item>
+            <title>0.9.0(14)</title>
+            <description><![CDATA[
+              <ul>
+                <li>修复一些已知的问题</li>
+                <li>增加一些新功能</li>
+                <li>替换更新源测试...</li>
+              </ul>
+            ]]></description>
+            <pubDate>Fri, 09 Dec 2022 10:46:44 +0800</pubDate>
+            <sparkle:version>14</sparkle:version>
+            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
+            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
+            <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit(build%2014).dmg" length="56461315" type="application/octet-stream" sparkle:edSignature="ZGxsAjOy1D0cTH6u2GWu/pek31XXF1uw1wabcMa7RYnEMSElCH525ylCMEimWRu4smwJPew1qVL1ilORO4bCCA=="/>
+        </item>
+        <item>
             <title>0.9.0(13)</title>
             <description><![CDATA[
               <ul>
