fix: github的最后一个更新html

--- a/Appcasting.html
+++ b/Appcasting.html
@@ -3,34 +3,19 @@
     <channel>
         <title>iFLYBUDS Kit</title>
         <item>
-            <title>0.9.0(14)</title>
+            <title>0.9.0(12)</title>
             <description><![CDATA[
-              <ul>
-                <li>修复一些已知的问题</li>
-                <li>增加一些新功能</li>
-                <li>替换更新源测试...</li>
-              </ul>
-            ]]></description>
-            <pubDate>Fri, 09 Dec 2022 10:46:44 +0800</pubDate>
-            <sparkle:version>14</sparkle:version>
+                <ul>
+                  <li>修复一些已知的问题</li>
+                  <li>增加一些新功能</li>
+                  <li>增强更新功能的稳定性</li>
+                </ul>
+              ]]></description>
+            <pubDate>Fri, 09 Dec 2022 15:28:50 +0800</pubDate>
+            <sparkle:version>12</sparkle:version>
             <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
             <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-            <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit(build%2014).dmg" length="56461315" type="application/octet-stream" sparkle:edSignature="ZGxsAjOy1D0cTH6u2GWu/pek31XXF1uw1wabcMa7RYnEMSElCH525ylCMEimWRu4smwJPew1qVL1ilORO4bCCA=="/>
-        </item>
-        <item>
-            <title>0.9.0(13)</title>
-            <description><![CDATA[
-              <ul>
-                <li>修复一些已知的问题</li>
-                <li>增加一些新功能</li>
-                <li>替换更新源测试2</li>
-              </ul>
-            ]]></description>
-            <pubDate>Thu, 08 Dec 2022 18:23:31 +0800</pubDate>
-            <sparkle:version>13</sparkle:version>
-            <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
-            <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
-            <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit(build%2013).dmg" length="56461414" type="application/octet-stream" sparkle:edSignature="g32c0lqj4IolRmaiJ3En4enJU71mnVlPHKNpld+botClC7rQrJzv/F5fvK6LhPJyJ+GjvrgBvhue77MQ/81lAQ=="/>
+            <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit(build%2012).dmg" length="56412161" type="application/octet-stream" sparkle:edSignature="OMXY0gFIunVy5WRIBTuA7nJLNHyPifRV5TGehyQRH6dKrF4pFOi8emrJJw8LIn7p/j4UhRML0KizEBl4+Yv6CA=="/>
         </item>
     </channel>
 </rss>
