--- a/Appcasting.html
+++ b/Appcasting.html
@@ -16,6 +16,9 @@
             <sparkle:shortVersionString>0.9.0</sparkle:shortVersionString>
             <sparkle:minimumSystemVersion>10.13</sparkle:minimumSystemVersion>
             <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit(build%2012).dmg" length="56412161" type="application/octet-stream" sparkle:edSignature="OMXY0gFIunVy5WRIBTuA7nJLNHyPifRV5TGehyQRH6dKrF4pFOi8emrJJw8LIn7p/j4UhRML0KizEBl4+Yv6CA=="/>
+            <sparkle:deltas>
+                <enclosure url="https://bitbucket.org/suppers/kitmacupdater/raw/main/iFLYBUDS%20Kit12-5.delta" sparkle:deltaFrom="5" length="5555554" type="application/octet-stream" sparkle:deltaFromSparkleExecutableSize="1845280" sparkle:deltaFromSparkleLocales="de,he,ar,el,ja,fa,en" sparkle:edSignature="sBz/OxXV62PBkKnOPQOAIMO/eSb4pnvOKFGwKGLThP9m0JTKLNgqY90c0aXutGNJfoTd5IcLYkzF80FyluOBAA=="/>
+            </sparkle:deltas>
         </item>
     </channel>
 </rss>
